# num4

./: .gitignore  CMakeLists.txt  Cargo.toml  NumberGroupGenerator.java  build-windows.yml  mainwindow.cpp  mainwindow.h  package.json
.github/workflows/: build-qt-windows.yml  build-rust-windows.yml  build-windows.yml
.jdeploy/: uuid
src/: main.rs
